# newtoast

./: .gitignore  .gitmodules  TODO  justfile  launch.json  runtimeconfig.json
.github/chatmodes/: newtoast-1.chatmode.md
engine/: CMakeLists.txt  Cargo.toml  build.rs
engine-rs/: Cargo.toml
engine-rs/.github/chatmodes/: newtoast-1.chatmode.md
engine-rs/src/: main.rs
engine-rs/src/dotnet/: hostfxr.rs  mod.rs  nethost.rs
engine/exe/: CMakeLists.txt  main.cpp
engine/lib/: CMakeLists.txt
engine/lib/include/: engine-main.hpp  internal.hpp
engine/lib/src/: engine-main.cpp  internal.cpp
engine/newtoast-bin/: Cargo.toml
engine/newtoast-bin/src/: main.rs
engine/newtoast-core/: Cargo.toml  build.rs
engine/newtoast-core/src/: engine_main.rs  ffi_char_t.rs  lib.rs
engine/newtoast-core/src/dotnet/: dotnet.rs  hostfxr.rs  mod.rs  runtime_interface.rs  string_name.rs
engine/newtoast-core/src/render/: gl_get_proc_address.rs  imgui_glfw.rs  imgui_sdl.rs  math_types.rs  mod.rs  render_context.rs  render_server.rs
engine/newtoast-core/src/runtime_interface/: config.rs  entrypoint.rs  input.rs  mod.rs  render.rs
engine/newtoast-core/src/util/: mod.rs  timing.rs
engine/src/: lib.rs  main.rs
engine/src/dotnet/: dotnet.rs  nethost.rs
framework/: NT.csproj
framework/src/: Entrypoint.cs  InitConfig.cs  Lib.cs  RenderServer.cs  RenderServerInternal.cs  Test.cs
framework/src/GlmSharp/: Extensions.cs  Half.cs  HalfHelper.cs
framework/src/GlmSharp/Mat2x2/: bmat2.cs  cmat2.cs  decmat2.cs  dmat2.cs  gmat2.cs  hmat2.cs  hmat2.glm.cs  imat2.cs  lmat2.cs  mat2.cs  umat2.cs
framework/src/GlmSharp/Mat2x3/: bmat2x3.cs  cmat2x3.cs  decmat2x3.cs  dmat2x3.cs  gmat2x3.cs  hmat2x3.cs  hmat2x3.glm.cs  imat2x3.cs  lmat2x3.cs  mat2x3.cs  umat2x3.cs
framework/src/GlmSharp/Mat2x4/: bmat2x4.cs  cmat2x4.cs  decmat2x4.cs  dmat2x4.cs  gmat2x4.cs  hmat2x4.cs  mat2x4.cs  (+4 more)
testproj/: Class1.cs  NTTest.csproj
(+113 files in other folders)
